--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,66 @@
 /** Add a comment at the beginning of your CSS styles with your name**/
 
+
+/** beginning of BGDC CSS styles**/
+
+.bgdc-advice {
+	background: #ffffff;
+	padding: 15%;
+	font-family: sans-serif;
+	font-size: 18px;
+	letter-spacing: normal;
+}
+
+.bgdc-advice a {
+	color: #333333;
+	font-size: .5em;
+}
+.bgdc-advice h1 {
+	font-family: sans-serif;
+	color: #F15A29;
+	font-size: 3em;
+	text-transform: capitalize;
+	font-weight: bold;
+	letter-spacing: normal;
+	margin-bottom: 10%;
+}
+
+.bgdc-advice h1 em {
+	font-family: serif;
+	color: #F7941D;
+	font-size: .5em;
+	text-transform: none;
+	font-weight: normal;
+	letter-spacing: normal;
+	font-style: italic;
+}
+
+.bgdc-advice .advice h4 {
+	font-family: sans-serif;
+	font-size: 1em;
+	font-weight: bold;
+	text-transform: capitalize;
+	color: #ED1C24;
+	text-align: left;
+	padding-top: 5%;
+}
+.bgdc-advice .advice p {
+	text-align: left;
+	padding: 0 20% 0% 5%;
+}
+
+.bgdc-advice footer {
+	background: #f7941d;
+	color: white;
+	font-size: .5em;
+	text-transform: capitalize;
+	text-align:right;
+	padding: .25%;
+	margin-top: 5%;
+}
+
+/** end of BGDC CSS styles**/
+
 /**** Sara S advice****/
 
 .saras-advice {
@@ -10573,4 +10634,3 @@ body.nancys-advice {
 .angelar-advice h4{font-size:24px;}
 .angelar-advice p{font-size:18px;}
 /*****End Angela Reeder Advice*****/
-
